Design promotion schema, api to get promotion list and apply promotion to invoice
